# mcomp

./: CMakeLists.txt  README.md  mcomp.c  mcomp.h
test/: entity.c  entity.h  main.c  named.c  named.h  owned.c  owned.h
